testsuite/bsc.evaluator/uninit/UninitBitErr4.bsv.bsc-ccomp-out.expected
checking package dependencies
compiling UninitBitErr4.bsv
code generation for sysUninitBitErr4 starts
Error: "UninitBitErr4.bsv", line 3, column 12: (G0028)
  `x[4]' uses uninitialized value (the position shown is the object's
  declaration). If this error is unexpected, please consult KPNS #32.
  During elaboration of the body of rule `test' at "UninitBitErr4.bsv", line
  8, column 9.
  During elaboration of `sysUninitBitErr4' at "UninitBitErr4.bsv", line 2,
  column 8.
Error: "UninitBitErr4.bsv", line 3, column 12: (G0028)
  `x[0]' uses uninitialized value (the position shown is the object's
  declaration). If this error is unexpected, please consult KPNS #32.
  During elaboration of the body of rule `test' at "UninitBitErr4.bsv", line
  8, column 9.
  During elaboration of `sysUninitBitErr4' at "UninitBitErr4.bsv", line 2,
  column 8.
